style: Remove fixed height and overflow properties from card text styles

--- a/website/assets/smart/partials/_cards.scss
+++ b/website/assets/smart/partials/_cards.scss
@@ -24,15 +24,13 @@ Cards and Card content styles
     }
     .card-text {
         padding: 0 40px;
-        height: 50px; /* Set a fixed height for uniformity */
-        overflow: hidden; /* Hide overflow */
+        
         p {
-            color: $muted-grey;
             display: -webkit-box;
+            -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
-            -webkit-line-clamp: 2; /* Limit to 2 lines */
             overflow: hidden;
-            text-overflow: ellipsis; /* Add ellipsis */
+            text-overflow: ellipsis;
         }
     }
     .card-action {
